# saltdash

./: .dockerignore  .editorconfig  .env-example  .env.template  .gitignore  CHANGELOG.md  CHANGES.md  Dockerfile  Dockerfile.dev  Dockerfile.test  Jenkinsfile  MANIFEST.in  Makefile  Pipfile  Procfile  README.md  bitbucket-pipelines.yml  config.yml.template  docker-compose.yml  pre_build.sh  pyproject.toml  setup.cfg  setup.py  uwsgi.ini
.circleci/: config.yml
.github/workflows/: saltdash.yml
client/: Dockerfile  package-lock.json  package.json
client/js/: app.js  jquery-global.js
client/scss/: app.scss
example/: saltdash.service
saltdash/: __init__.py  conf.py  settings.py  urls.py  wsgi.py
saltdash/core/: middleware.py  server.py
saltdash/dash/: admin.py  models.py  urls.py  views.py
saltdash/dash/management/commands/: purge_job_cache.py  serve.py  uwsgi.py
saltdash/dash/migrations/: 0001_initial.py
saltdash/dash/templates/dash/: _job_summary.html  _pagination.html  _result_card.html  _return_card.html  get_started.html  job_detail.html  job_list.html  result_list.html  return_detail.html
saltdash/dash/templates/dash/_results/: json.html  state.html  text.html
saltdash/dash/templatetags/: dash_tags.py
saltdash/dash/tests/: test_models.py  test_states.py  test_templatetags.py
saltdash/healtcheck/: middleware.py  urls.py  views.py
saltdash/settings/: __init__.py  _logging.py  base.py  local.py.example
saltdash/templates/: base.html
saltdash/templates/dash/: _job_summary.html  _pagination.html  _result_card.html  job_list.html  result_detail.html  result_list.html
saltdash/templates/dash/_results/: hidden.html  orchestrate.html  state.html  text.html
scripts/: pre_build.sh
