[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "saltdash"
author = "Peter Baumgartner"
author-email = "pete@lincolnloop.com"
home-page = "https://github.com/lincolnloop/saltdash/"
description-file = "README.md"
keywords = "salt, dashboard"
license = "MIT"
requires=[
   "django (==2.0.3)",
   "dj-database-url (==0.5.0)",
   "goodconf[yaml] (<1.0)",
   "psycopg2-binary (==2.7.4)",
   "python-json-logger (==0.1.8)",
   "raven (==6.6.0)",
   "social-auth-app-django (==2.1.0)",
   "pytest-cov (==2.5.1)",
   "pytest-django (==3.1.2)",
   "gunicorn (==19.7.1)",
   "whitenoise (==3.3.1)",
]
requires-python=">3.5"

[tool.flit.scripts]
saltdash = "saltdash.conf:config.django_manage"
"manage.py" = "saltdash.conf:config.django_manage"
saltdash-generate-config = "saltdash.conf:config.generate_yaml"

[tool.platter]
python = "python3.6"
prebuild-script = """
set -eufx
cd $SOURCE_DIR/client
yarn install --production
cd $SOURCE_DIR
cp setup.cfg $DATA_DIR
pipenv install --deploy
export SECRET_KEY=secret
pipenv run manage.py collectstatic --noinput
"""
