[tool.poetry]
name = "saltdash"
version = "0.1"
description = "A Dahsboard for SaltStack's Job Cache"
readme = "README.md"
authors = ["Peter Baumgartner <pete@lincolnloop.com>"]
homepage = "https://github.com/lincolnloop/saltdash/"
keywords = ["salt", "dashboard"]
license = "MIT"
include = ["saltdash/templates/**/*", "saltdash/static/**/*"]

[tool.poetry.dependencies]
django = "2.0.7"
dj-database-url = "0.5.0"
goodconf = {version = "~1.0", extras = ["yaml"]}
"psycopg2-binary" = "2.7.5"
python-json-logger = "0.1.9"
raven = "6.9.0"
social-auth-app-django = "2.1.0"
pytest-cov = "2.5.1"
pytest-django = "3.3.2"
model-mommy = "1.6.0"
waitress = "1.1.0"
whitenoise = "~4.0"

[tool.poetry.scripts]
saltdash = "saltdash:config.django_manage"
manage.py = "saltdash:config.django_manage"
saltdash-generate-config = "saltdash:generate_config"
