[metadata]
name = saltdash
version = 0.9
description = A Dahsboard for SaltStack's Job Cache
long_description = file: README.md
author = Peter Baumgartner
author_email = pete@lincolnloop.com
url = https://github.com/lincolnloop/saltdash/
keywords = salt, dashboard
license = MIT

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    django==2.0.3
    dj-database-url==0.5.0
    goodconf[yaml]<1.0
    psycopg2-binary==2.7.4
    python-json-logger==0.1.8
    raven==6.6.0
    social-auth-app-django==2.1.0
    pytest-cov==2.5.1
    pytest-django==3.1.2
    waitress==1.1.0
    whitenoise==3.3.1

[options.entry_points]
console_scripts =
    saltdash = saltdash:config.django_manage
    manage.py = saltdash:config.django_manage
    saltdash-generate-config = saltdash:generate_config


[coverage:run]
source = saltdash

[coverage:report]
show_missing = true
skip_covered = true

[tool:pytest]
DJANGO_SETTINGS_MODULE = saltdash.settings
addopts = --pyargs
testpaths = saltdash
filterwarnings = all
