[metadata]
name = saltdash
version = 0.9.5
description = A Dahsboard for SaltStack's Job Cache
long_description = file: README.md, CHANGES.md
long_description_content_type = text/markdown
author = Peter Baumgartner
author_email = pete@lincolnloop.com
url = https://github.com/lincolnloop/saltdash/
keywords = salt, dashboard
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Framework :: Django

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    django==2.0.5
    dj-database-url==0.5.0
    goodconf[yaml]<1.0
    psycopg2-binary==2.7.4
    python-json-logger==0.1.8
    raven==6.8.0
    social-auth-app-django==2.1.0
    pytest-cov==2.5.1
    pytest-django==3.2.1
    model-mommy==1.5.1
    waitress==1.1.0
    whitenoise==3.3.1

[options.entry_points]
console_scripts =
    saltdash = saltdash:config.django_manage
    manage.py = saltdash:config.django_manage
    saltdash-generate-config = saltdash:generate_config

[bdist_wheel]
universal = 1

[zest.releaser]
tag-signing = yes

[coverage:run]
source = saltdash

[coverage:report]
show_missing = true
skip_covered = true

[tool:pytest]
DJANGO_SETTINGS_MODULE = saltdash.settings
addopts = --pyargs
testpaths = saltdash
filterwarnings = all
