[metadata]
name = saltdash
version = 0.9.9
description = A Dahsboard for SaltStack's Job Cache
long_description = file: README.md, CHANGES.md
long_description_content_type = text/markdown
author = Peter Baumgartner
author_email = pete@lincolnloop.com
url = https://github.com/lincolnloop/saltdash/
keywords = salt, dashboard
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Framework :: Django

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    django==2.2.12
    django-alive<1.1
    dj-database-url==0.5.0
    goodconf[yaml]<1.1
    psycopg2-binary==2.8.5
    python-json-logger==0.1.11
    sentry-sdk==0.14.3
    social-auth-app-django==3.1.0
    pytest-cov==2.8.1
    pytest-django==3.9.0
    model-bakery==1.1.0
    waitress==1.4.3
    whitenoise==5.0.1

[options.entry_points]
console_scripts =
    saltdash = saltdash:config.django_manage
    manage.py = saltdash:config.django_manage
    saltdash-generate-config = saltdash:generate_config

[bdist_wheel]
universal = 1

[zest.releaser]
tag-signing = yes

[coverage:run]
source = saltdash

[coverage:report]
show_missing = true
skip_covered = true

[tool:pytest]
DJANGO_SETTINGS_MODULE = saltdash.settings
addopts = --pyargs
testpaths = saltdash
filterwarnings = all
